# ood-detection-welding

./: .gitignore  README.md  continual_learning.py  evaluate_models_ood.py  hyperparam_search.py  mlflow_logger.py  ood_score.py  params.py  post_hoc_ood.py  pyproject.toml  train_CODiT.py  train_mlp.py  train_transformer.py  train_vq_vae.py  utils.py  utils_ood.py  vq_vae_transformer_ood.py
continual_learning/: lwf.py  replay.py
data/Welding/: preprocess_data.py  test_idx.npy  val_idx.npy
data_loader/: data_module.py  datasets.py  laten_ds_helper.py  utils.py
model/: ODIN.py  autencoder_lightning_base.py  classification_base.py  embedding.py  mahalanobis.py  mlp.py  msp.py  transformer_base.py  transformer_block.py  transformer_decoder.py  vector_quantizer.py  vq_vae_patch_embed.py
model/CODiT/: RADME.md
model/CODiT/dataset/: .gitignore  transformations_batching.py
model/CODiT/models/: lenet.py
model/edl_approach/: edl_loss.py
