[project]
name = "welding-ood-quality-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "absl-py==2.2.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "alembic==1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "avalanche-lib==0.6.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boto3==1.37.16",
    "botocore==1.37.16",
    "bottle==0.13.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "clarabel==0.10.0",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "cmeel==0.57.3",
    "colorlog==6.9.0",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cvxopt==1.3.2",
    "cycler==0.12.1",
    "daqp==0.6.0",
    "databricks-sdk==0.46.0",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "docker==7.1.0",
    "docker-pycreds==0.4.0",
    "ecos==2.0.14",
    "einops==0.8.1",
    "einx==0.3.0",
    "executing==2.2.0",
    "fastapi==0.115.11",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flask==3.1.0",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "gdown==5.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.38.0",
    "gputil==1.4.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "greenlet==3.1.1",
    "grpcio==1.71.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "highspy==1.10.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jax==0.6.0",
    "jaxlib==0.6.0",
    "jaxopt==0.8.5",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.8",
    "lightning==2.5.1",
    "lightning-utilities==0.14.3",
    "mako==1.3.9",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "ml-dtypes==0.5.1",
    "mlflow==2.21.0",
    "mlflow-skinny==2.21.0",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook-shim==0.2.4",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "opentelemetry-api==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-semantic-conventions==0.52b0",
    "opt-einsum==3.4.0",
    "optuna==4.2.1",
    "optuna-dashboard==0.17.0",
    "osqp==0.6.7.post3",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "piqp==0.5.0",
    "platformdirs==4.3.7",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "protobuf==6.30.2",
    "proxsuite==0.7.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycocotools==2.0.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytorch-lightning==2.5.1",
    "pytorchcv==0.0.73",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "qdldl==0.1.7.post5",
    "qpalm==1.2.5",
    "qpax==0.0.9",
    "qpsolvers==4.6.0",
    "quadprog==0.1.13",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "s3transfer==0.11.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "scs==3.2.7.post2",
    "send2trash==1.8.3",
    "sentry-sdk==2.27.0",
    "setproctitle==1.3.5",
    "setuptools==80.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.39",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.2.2",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "torchaudio==2.6.0+cu126",
    "torchmetrics==1.7.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.3.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.1",
    "uri-template==1.3.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "vector-quantize-pytorch==1.22.2",
    "wandb==0.19.10",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "zipp==3.21.0",
]

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation"]
