[project]
name = "welding-ood-quality-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "lightning>=2.5.0",
    "torchmetrics>=1.7.0",
    "mlflow>=2.21.0",
    "boto3>=1.37.0",
    "optuna>=4.2.0",
    "einops>=0.8.0",
    "tqdm>=4.67.0",
    "jupyterlab>=4.3.0",
    "vector_quantize_pytorch"

]

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation"]
